# time_less

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: ai.py  article.py  main.py  model.py  parser.py  telegram_bot.py
