[tool.poetry]
name = "time-less"
version = "0.1.0"
description = ""
authors = ["sonac <sonag007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = ">=1.51.2,<1.52.0"
python-dotenv = ">=1.0.1,<1.1.0"
apscheduler = ">=3.10.4,<3.11.0"
peewee = ">=3.17.6,<3.18.0"
requests = ">=2.32.3,<2.33.0"
beautifulsoup4 = ">=4.12.3,<4.13.0"
python-telegram-bot = ">=20.3,<21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
